--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aliimam/icons": "^0.1.9",
     "@hookform/resolvers": "^5.2.2",
+    "@mynaui/icons-react": "^0.4.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/eslint-plugin-query": "^5.91.3",
     "@types/node": "^24.10.9",
     "@types/react": "^19.2.5",
