--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
+    "razorpay": "^2.9.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
