--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@aliimam/icons": "^0.1.9",
     "@hookform/resolvers": "^5.2.2",
-    "@mynaui/icons-react": "^0.4.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
@@ -40,6 +39,7 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "vite-bundle-analyzer": "^1.3.6",
     "zod": "^4.3.6"
   },
   "devDependencies": {
